test/reusable/error/gen_shift_two.bfr
# 2つ以上のシフトは未実装
main {
  a: array(3) {
    i: index;
  };
} [
  > a@i 2
]